[build-system]
build-backend = "hatchling.build"
requires = [
  "hatch-vcs",
  "hatchling>=1.27",
]

[project]
name = "tinytext"
description = "A helpful converter to change any normal text into cuter tinier text"
readme = "README.md"
keywords = [
  "botally",
  "cute text",
  "generator",
  "tiny text",
  "tiny type",
]
license = "MIT"
license-files = [ "LICENSE.txt" ]
authors = [ { name = "Hugo van Kemenade" } ]
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Artistic Software",
  "Topic :: Text Processing",
]
dynamic = [ "version" ]
optional-dependencies.tests = [
  "pytest",
  "pytest-cov",
]
urls.Changelog = "https://github.com/hugovk/tinytext/releases"
urls.Homepage = "https://github.com/hugovk/tinytext"
urls.Source = "https://github.com/hugovk/tinytext"
scripts.tinytext = "tinytext.cli:main"

[tool.hatch]
version.source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/tinytext/_version.py"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[tool.ruff]
fix = true

lint.select = [
  "C4",     # flake8-comprehensions
  "E",      # pycodestyle errors
  "EM",     # flake8-errmsg
  "F",      # pyflakes
  "I",      # isort
  "ICN",    # flake8-import-conventions
  "ISC",    # flake8-implicit-str-concat
  "LOG",    # flake8-logging
  "PGH",    # pygrep-hooks
  "PIE",    # flake8-pie
  "PT",     # flake8-pytest-style
  "PYI",    # flake8-pyi
  "RUF022", # unsorted-dunder-all
  "RUF100", # unused noqa (yesqa)
  "S",      # flake8-bandit
  "UP",     # pyupgrade
  "W",      # pycodestyle warnings
  "YTT",    # flake8-2020
]
lint.ignore = [
  "E203",   # Whitespace before ':'
  "E221",   # Multiple spaces before operator
  "E226",   # Missing whitespace around arithmetic operator
  "E241",   # Multiple spaces after ','
  "PIE790", # flake8-pie: unnecessary-placeholder
  "UP038",  # Makes code slower and more verbose
]
lint.per-file-ignores."tests/**/*.py" = [
  "S101", # Asserts allowed in tests
]
lint.flake8-import-conventions.aliases.datetime = "dt"
lint.flake8-import-conventions.banned-from = [ "datetime" ]
lint.flake8-pytest-style.parametrize-names-type = "csv"
lint.isort.known-first-party = [ "tinytext" ]
lint.isort.required-imports = [ "from __future__ import annotations" ]

[tool.pyproject-fmt]
max_supported_python = "3.14"

[tool.pytest.ini_options]
testpaths = [ "tests" ]

[tool.mypy]
pretty = true
strict = true
show_error_codes = true
