[metadata]
name = tinytext
description = A helpful converter to change any normal text into cuter tinier text
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hugovk/tinytext
author = Hugo van Kemenade
license = MIT
license_file = LICENSE.txt
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Artistic Software
    Topic :: Text Processing
keywords =
    botally
    tiny type
    tiny text
    cute text
    generator
project_urls =
    Source=https://github.com/hugovk/tinytext

[options]
packages = find:
python_requires = >=3.6
package_dir = =src
setup_requires =
    setuptools_scm
zip_safe = True

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    tinytext = tinytext.cli:main

[options.extras_require]
tests =
    hypothesis-auto
    pytest
    pytest-cov

[flake8]
max_line_length = 88
